--- a/Battleship/GameWindow.xaml
+++ b/Battleship/GameWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Battleship"
         mc:Ignorable="d" ResizeMode="NoResize"
-        Title="GameWindow" Height="700" Width="800">
+        Title="GameWindow" Height="700" Width="800" Loaded="GameWindow_OnLoaded">
     <Window.Background>
         <ImageBrush/>
     </Window.Background>
